implement own hook + context based multiple language system

--- a/client/public/locales/bn/translation.json
+++ b/client/public/locales/bn/translation.json
@@ -1,3 +1,86 @@
 {
-  "top_bar_title": "কমিউনিটি এডমিন প্যানেল"
+  "top_bar_title": "কমিউনিটি এডমিন প্যানেল",
+  "cart_title": "আপনার কার্ট",
+  "more": "আরোে দেখুন",
+  "continue_to_shop": "শপিং চালিয়ে যান",
+  "back_to_cart": "কার্ট ফিরে যান  ",
+  "add_to_cart": "কার্ট এ যোগ করুন",
+  "no_product_found": "কোন পণ্য খুঁজে পাওয়া যায়নি",
+  "details": "বিস্তারিত",
+  "top_popular_products": "সর্বাধিক জনপ্রিয়",
+  "top_selling_products": "",
+  "shop_by_categories": "শপিং দারাাগন ",
+  "shop_by_brands": "শপিং দাঁড়া ব্রান্ড"   ,
+  "login": "লগ ইন করুন",
+  "registration": "সাইন আপ করুন",
+  "or": "অথবা",
+  "phone": "ফোন নাম্বার",
+  "total_price": "mot dam",
+  "search": "অনুসন্ধান করুন",
+  "more_buy": "আরো কিনুন",
+  "just_for_you": "শুধু আপনার জন্য",
+  "my_order":  "আমার অর্ডার",
+  "my_returns": "আমার রিটার্নস",
+  "my_cancel": "আমার বাতিলকরণ",
+  "my_whist": "আমার ইচ্ছাগুলি এবং অনুসৃত দোকান",
+  "voucher": "ভাউচার",
+  "my_comment": "আমার পর্যালোচনা",
+  "address": "ঠিকানা বই",
+  "d": "আমার পেমেন্ট অপশন",
+  "account_info": "অ্যাকাউন্টের তথ্য",
+  "setting": "সােটিংস",
+  "terms": "নীতিসমূহ",
+  "helps": "সাহায্য",
+  "home_delivery": "হোম ডেলিভারি",
+  "service": "সার্ভিস",
+  "rating_review": "রেটিং ও রিভিউ",
+  "seller_response": "বিক্রেতার প্রতিক্রিয়া",
+  "question_about_product": "এই পণ্য সম্পর্কে প্রশ্ন",
+  "tell_question": "প্রশ্ন জিজ্ঞাসা করুন",
+  "visit_store": "ষ্টোর পরিদর্শন",
+  "recomendation": "আপনার জন্য সুপারিশ",
+  "dt": "শীর্ষ বাছাই",
+  "highlight": "হাইলাইট",
+  "description1": "বিবরণ",
+  "customer_gallery": "গ্রাহক গ্যালারী",
+  "buy_now": "এখনই কিনুন",
+  "add_to_cart1": "কার্টে যোগ করুন",
+  "continue_to_shop1": "শপিং চালিয়ে যান",
+  "item_of_stock": "স্টকটিতে কেবলমাত্র 4 আইটেম",
+  "tk": "৳",
+  "product": "পণ্য",
+  "total": "সর্বমোট",
+  "reduce_price": "মূল্যহ্রাস",
+  "save": "সংরক্ষিত",
+  "sub_total": "সাবটোটাল",
+  "items": "আইটেমসমূহ",
+  "shipping_fee": "শিপিং ফি",
+  "mot": "মোট",
+  "with_vat": "ভ্যাট অন্তর্ভুক্ত",
+  "jekanhe_projojo": "যেখানে প্রযোজ্য",
+  "order_now": "অর্ডার প্লেস করুন",
+  "bill_send_address": "বিল একই ঠিকানায় পাঠানো হবে",
+  "success_addto_cart": "সফলভাবে কার্ট যোগ",
+  "goto_cart": "কার্টে যান",
+  "checkout": "চেকআউট",
+  "": "বিল পরিশোধের ঠিকানা বেছে নিন",
+  "add_new_address": "নতুন ঠিকানা যুক্ত ",
+  "wsw": "Rasel Mahmud",
+  "ww": "017737321",
+  "home": "বাড়ি",
+  "vd": "west tekani, postcode(5826), horikhali, sonatola-bograRajshahi - Bagura - Sonatola",
+  "er": "পূর্বনির্ধারিত বিলিং ঠিকানা",
+  "add_new_address1": "নতুন ঠিকানা যুক্ত করুন",
+  "vb": "পুরো নাম",
+  "fdgdf": "ফোন নম্বর",
+  "fdg": "ড়েগিওন",
+  "45dff": "শহর",
+  "45dffd": "ফোন",
+  "45dffdf": "ঠিকানা",
+  "45dffdf": "Select a label for effective delivery:",
+  "45dfdff": "OFFICE",
+  "4df5dff": "HOME",
+  "45dfsdf": "পূর্বনির্ধারিত শিপিং ঠিকানা বানান",
+  "45ddfff": "পূর্বনির্ধারিত বিলিং ঠিকানা বানান",
+  "45ddsfvff": "সেভ করুন"
 }
