enable dark theme and button component

--- a/client/public/locales/bn/translation.json
+++ b/client/public/locales/bn/translation.json
@@ -11,11 +11,11 @@
 
   "Top Popular products": "সর্বাধিক জনপ্রিয় পণ্য",
   "Top Selling products": "সর্বাধিক বিক্রয় পণ্য",
-  "Top Offers": "সর্বাধিক সুবিধা",
+  "Top Offers": "সর্বাধিক ডিসকাউন্ট",
 
   "English": "ইংরেজি",
   "Bangla": "বাংলা",
-
+  "More": "আরও দেখুন",
   "Dark": "কালো",
   "Light": "আলো",
   "System": "সিস্টেম",
