--- a/client/public/locales/bn/translation.json
+++ b/client/public/locales/bn/translation.json
@@ -18,7 +18,8 @@
   "Top Popular products": "সর্বাধিক জনপ্রিয় পণ্য",
   "Top Selling products": "সর্বাধিক বিক্রয় পণ্য",
   "Top Offers": "সর্বাধিক ডিসকাউন্ট",
-
+    "PICK A CATEGORY": "একটি ক্যাটাগরি বাছুন",
+    "BRANDS": "ব্র্যান্ডস",
   "English": "ইংরেজি",
   "Bangla": "বাংলা",
   "More": "আরও দেখুন",
